
cc_library(
	name = "gil",
	visibility = ["//visibility:public"],
	includes = [
		"include/",
	],
	hdrs = glob([
		"include/boost/**/*.hpp",
		"include/boost/**/*.ipp",
	]),
	srcs = [
	],
	defines = [
	],
	deps = [
		"@com_github_bazelboost_iterator//:iterator",
		"@com_github_bazelboost_mpl//:mpl",
		"@com_github_bazelboost_type_traits//:type_traits",
		"@com_github_bazelboost_bind//:bind",
		"@com_github_bazelboost_static_assert//:static_assert",
		"@com_github_bazelboost_config//:config",
		"@com_github_bazelboost_utility//:utility"
	],
)
