
cc_library(
	name = "gil",
	visibility = ["//visibility:public"],
	includes = [
		"include/",
	],
	hdrs = glob([
		"include/boost/**/*.hpp",
		"include/boost/**/*.ipp",
	]),
	srcs = [
	],
	defines = [
	],
	deps = [
		"@com_github_bazelboost_config//:config",
		"@com_github_bazelboost_core//:core",
		"@com_github_bazelboost_mpl//:mpl",
		"@com_github_bazelboost_iterator//:iterator",
		"@com_github_bazelboost_integer//:integer",
		"@com_github_bazelboost_type_traits//:type_traits",
		"@com_github_bazelboost_bind//:bind",
		"@com_github_bazelboost_preprocessor//:preprocessor",
		"@com_github_bazelboost_array//:array",
		"@com_github_bazelboost_smart_ptr//:smart_ptr",
		"@com_github_bazelboost_filesystem//:filesystem",
		"@com_github_bazelboost_algorithm//:algorithm",
		"@com_github_bazelboost_function//:function",
		"@com_github_bazelboost_lexical_cast//:lexical_cast",
		"@com_github_bazelboost_static_assert//:static_assert",
		"@com_github_bazelboost_lambda//:lambda",
		"@com_github_bazelboost_concept_check//:concept_check"
	],
)
